# steelmaking-db

./: .gitignore
steelmaking/: event_code.txt  (+11 more)
steelmaking/steelmaking-simulation/: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
steelmaking/steelmaking-simulation/deploy/: .env.example  DEPLOYMENT.md  Dockerfile  build_binary.sh  build_wheel.sh  docker-compose.yml  start.sh  stop.sh
steelmaking/steelmaking-simulation/scripts/: README.md  test_cancel.py
steelmaking/steelmaking-simulation/steelmaking_simulation/: __init__.py  config.py  database.py  event_engine.py  event_generator.py  heat_planner.py  main.py  operation_processor.py  scheduler.py  seeding.py  simulator.py  time_utils.py  warning_engine.py
steelmaking/steelmaking-simulation/steelmaking_simulation/config/: __init__.py  constants.py  equipment.py  settings.py
steelmaking/steelmaking-simulation/steelmaking_simulation/core/: __init__.py  processor.py  scheduler.py  simulator.py
steelmaking/steelmaking-simulation/steelmaking_simulation/database/: __init__.py  events.py  kpi_stats.py  manager.py  operations.py  warnings.py
steelmaking/steelmaking-simulation/steelmaking_simulation/events/: __init__.py  codes.py  engine.py  generator.py  messages.py  sequences.py
steelmaking/steelmaking-simulation/steelmaking_simulation/kpi_stats/: __init__.py  engine.py  generator.py
steelmaking/steelmaking-simulation/steelmaking_simulation/planning/: __init__.py  heat_planner.py
steelmaking/steelmaking-simulation/tests/: conftest.py  test_event_generator.py  test_simulator_constraints.py
(+16 files in other folders)
